<?xml version="1.0"?>
<package>
  <name>utils_jcppsocket</name>
  <version>0.0.1</version>
  <description>
    The utils_jcppsocket package contains mechanisms to communicate
    data over sockets with java.
  </description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
