<?xml version="1.0"?>
<package>
  <name>cslibs_jcppsocket</name>
  <version>0.0.1</version>
  <description>
    The cslibs_jcppsocket package contains mechanisms to communicate
    data over sockets with java.
  </description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>
  <license>BSD</license>

  <author email="richard.hanten@uni-tuebingen.de">hanten</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cslibs_threadpool</build_depend>
  <run_depend>cslibs_threadpool</run_depend>

  <export>
  </export>
</package>
